--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         }
     ],
     "minimum-stability": "beta",
-    "require": {},
+    "require": {
+        "php": "^5.6 || ^7.0"
+    },
     "autoload": {
         "psr-4": {
             "PostmanImporter\\": "./vendor/postman-importer/src/"
